<resources>
    <string name="google_api_key" translatable="false">AIzaSyCaskQB9DWs2mEgX3hMMVS28oHvzH7X_ds</string>
    <string name="app_name">DrinkUP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Achievements -->
    <string name="ach_drink5beer">Drink 5 beers</string>
    <string name="ach_drink20beer">Drink 20 beers</string>
    <string name="ach_drink100beer">Drink 100 beers</string>
    <string name="ach_drink5shots">Drink 5 shots</string>
    <string name="ach_drink20shots">Drink 20 shots</string>\
    <string name="achievement_completed">Achievement completed</string>

    <!-- Strings related to Settings -->

    <string-array name="pref_gender_list_titles">
        <item>Men</item>
        <item>Women</item>
    </string-array>
    <string-array name="pref_gender_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="overview">Overview</string>
    <string name="my_drinks">My Drinks</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="category_attr" formatted="true">Category: %1$s</string>
    <string name="price_attr" formatted="true">Price: %1$.2f €</string>
    <string name="alcohol_with_percents" formatted="true">Alcohol by volume: %1$.1f %%</string>
    <string name="drink_volume_with_millis" formatted="true">Volume: %1d ml</string>
    <string name="drink_volume" formatted="true">Volume: %1.0f ml</string>
    <string name="my_drinks_create_button_text">Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_drink_edit_button">Edit</string>
    <string name="category_icon_placeholder">Category Icon</string>
    <string name="my_drink_name_hint">Name</string>
    <string name="my_drink_price_hint">Price (€) 0 to 99</string>
    <string name="my_drink_volume_hint">Volume (ml) 0 to 1000</string>
    <string name="my_drink_alcohol_hint">Alcohol by volume (%) 0 to 99</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="edit_drink">Edit Drink</string>
    <string name="create_drink">Create Drink</string>
    <string name="error_drink_name_empty">Name cannot be empty</string>
    <string name="error_drink_price_empty">Price cannot be empty</string>
    <string name="error_drink_abv_empty">Alcohol by value cannot be empty</string>
    <string name="error_drink_volume_empty">Volume cannot be empty</string>
    <string name="decimal_point_character">.</string>
    <string name="gender">Gender</string>
    <string name="pref_weight_title">Weight (kg)</string>
    <string name="total_price_of_session" formatted="true">Total price: %1$.2f  €</string>
    <string name="drink_added_from_watch_toast">Your watches added drink!</string>
    <string name="bac">Blood alcohol content</string>
    <string name="bac_not_set">Blood alcohol content: Not available (Set weight and gender in Settings)</string>
    <string name="show_map">Show map</string>
    <string name="bac_message_no_data">No data to provide alcohol in blood</string>
    <string name="you_have">You have</string>
    <string name="alcohol_promile">‰ of alcohol in blood</string>
    <string name="session_detail">Session detail</string>
    <string name="end_session">End session</string>
    <string name="add_drink">Add drink</string>
    <string name="my_drink_add">Add</string>
    <string name="statistics_option_price">Price</string>
    <string name="statistics_option_volume">Volume</string>
    <string name="statistics_option_categories">Categories</string>
    <string name="statistics_time_period_last_week">Last week</string>
    <string name="statistics_time_period_last_month">Last month</string>
    <string name="statistics_time_period_last_year">Last year</string>
    <string name="statistics_prices">Prices</string>
    <string name="statistics_volume">Volume</string>
    <string name="edit_title">Edit title of session</string>
    <string name="permission_title">Granting the permission to location</string>
    <string name="permission_text">Hi there, if u want to see where u were drinking then u should allow location for this app</string>
    <string name="no_session_text">Create new session by adding drink to it (click \'+\')</string>
    <string name="map">Map</string>
</resources>
