<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_overview"
                android:icon="@drawable/ic_menu_overview"
                android:title="@string/overview" />
        <item
                android:id="@+id/nav_my_drinks"
                android:icon="@drawable/ic_menu_my_drinks"
                android:title="@string/my_drinks" />
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_menu_history"
                android:title="@string/history" />
        <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_menu_statistics"
                android:title="@string/statistics" />
        <item
                android:id="@+id/nav_achievements"
                android:icon="@drawable/ic_menu_achievements"
                android:title="@string/achievements" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />
    </group>
</menu>