<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_drinks_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.ActionBar" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".activity.EditDrinkDefinitionActivity">

        <LinearLayout android:orientation="vertical"
                      android:layout_height="wrap_content"
                      android:layout_margin="8dp"
                      android:layout_width="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/my_drinks_create_name_input_layout"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    android:hint="@string/my_drink_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_drinks_create_name_input"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="30"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout android:layout_margin="8dp"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <TextView android:text="@string/category"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                <Spinner
                        android:id="@+id/my_drinks_create_category_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                </Spinner>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/my_drinks_create_price_input_layout"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_drink_price_hint">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_drinks_create_price_input"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/my_drinks_create_abv_input_layout"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_drink_alcohol_hint">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_drinks_create_abv_input"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/my_drinks_create_volume_input_layout"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_drink_volume_hint">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/my_drinks_create_volume_input"
                        android:inputType="number"
                        android:maxLines="1"
                        android:lines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
